--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,6 +13,12 @@ body {
   font-family: 'MinecraftRegular', sans-serif;
 }
 
+.bg-blur-dark {
+  z-index: -10;
+  backdrop-filter: blur(5px);
+  background-color: rgba(0, 0, 0, 0.5); /* Ajustez l'obscurité */
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
