--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,8 +15,13 @@ body {
 
 .bg-blur-dark {
   z-index: -10;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   backdrop-filter: blur(5px);
-  background-color: rgba(0, 0, 0, 0.5); /* Ajustez l'obscurité */
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 code {
